--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mapbox/polyline": "^1.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
@@ -26,15 +27,18 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "axios": "^1.5.1",
+    "human-format": "^1.2.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
+    "@types/mapbox__polyline": "^1.0.4",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
