--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mapbox/polyline": "^1.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@react-three/drei": "^9.88.5",
+    "@react-three/fiber": "^8.15.5",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
@@ -33,7 +35,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "styled-components": "^6.1.0",
     "superjson": "^1.13.1",
+    "three": "^0.157.0",
+    "three-orbitcontrols-ts": "^0.1.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -42,6 +47,7 @@
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.157.2",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
