--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -13,6 +13,11 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025 # smtp server
+      - 8025:8025 # web ui
 
 volumes:
   mysql-data:
