--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "axios": "^1.5.1",
+    "email-templates": "^11.1.1",
     "human-format": "^1.2.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
+    "nodemailer": "^6.9.7",
+    "pug": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
@@ -42,10 +45,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/email-templates": "^10.0.4",
     "@types/eslint": "^8.44.2",
     "@types/fabric": "^5.3.5",
     "@types/mapbox__polyline": "^1.0.4",
     "@types/node": "^18.16.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pug": "^2.0.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.157.2",
