--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.1.1",
     "@react-three/drei": "^9.88.5",
     "@react-three/fiber": "^8.15.5",
+    "@stripe/stripe-js": "^2.2.0",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
@@ -31,13 +32,14 @@
     "axios": "^1.5.1",
     "email-templates": "^11.1.1",
     "human-format": "^1.2.0",
-    "next": "^13.5.4",
+    "next": "^13.5.6",
     "next-auth": "^4.23.0",
     "nodemailer": "^6.9.7",
     "pug": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "stripe": "^14.5.0",
     "styled-components": "^6.1.0",
     "superjson": "^1.13.1",
     "three": "^0.157.0",
@@ -54,6 +56,7 @@
     "@types/pug": "^2.0.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/stripe": "^8.0.417",
     "@types/three": "^0.157.2",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
