--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.1.1",
     "@react-three/drei": "^9.88.5",
     "@react-three/fiber": "^8.15.5",
+    "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
