--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     "**/*.mjs",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "./src/components/editor/*", "./src/components/bubbles/*"]
+  "exclude": ["node_modules"]
 }
