--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.18",
     "@mapbox/polyline": "^1.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@preact/signals-react": "^1.3.8",
     "@prisma/client": "^5.1.1",
     "@react-three/drei": "^9.88.5",
     "@react-three/fiber": "^8.15.5",
