--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.5.1",
     "email-templates": "^11.1.1",
     "human-format": "^1.2.0",
+    "lodash": "^4.17.21",
     "next": "^13.5.6",
     "next-auth": "^4.23.0",
     "nodemailer": "^6.9.7",
